# send-benchmarking

./: README.md  dev notes and to do.txt  manage.py  pyproject.toml
benchmarking_app/: apps.py  forms.py  urls.py  utils.py  views.py
benchmarking_app/templates/benchmarking_app/: base.html
benchmarking_app/templates/benchmarking_app/includes/: navbar-item.html  navbar.html
benchmarking_app/templates/benchmarking_app/views/: home.html  select_ehcp_dataset.html  single_year_ehcp_graphs.html  trend_graphs.html
send_benchmarking/: asgi.py  forms.py  settings.py  urls.py  wsgi.py
static/EHCP Data/: annual_reviews.csv  ceased_plans.csv  personal_budgets.csv  residential_settings.csv  sen_need_newplans.csv  work_based_placements.csv
static/SEND_data/: stat neighbours.csv
